--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+10
+  intl: ^0.17.0
+
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.1
+  geocode: ^1.0.1
+  positioned_tap_detector_2: ^1.0.4
 
 dev_dependencies:
   flutter_test:
