--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  anim_search_bar: ^2.0.2
+  input_history_text_field: ^0.1.0
+  flutter_geocoder: ^0.2.2-nullsafety
 
 dev_dependencies:
   flutter_test:
