--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   anim_search_bar: ^2.0.2
   input_history_text_field: ^0.1.0
   flutter_geocoder: ^0.2.2-nullsafety
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
