--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   http: ^0.13.4
   path_provider: ^2.0.9
   input_history_text_field: ^0.1.0
-  flutter_geocoder: ^0.2.2-nullsafety
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
