--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+10
   intl: ^0.17.0
-
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geocode: ^1.0.1
@@ -44,6 +43,7 @@ dependencies:
   path_provider: ^2.0.9
   input_history_text_field: ^0.1.0
   flutter_geocoder: ^0.2.2-nullsafety
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
