--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   input_history_text_field: ^0.1.0
   flutter_geocoder: ^0.2.2-nullsafety
   shared_preferences: ^2.0.13
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
