--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   #flutter_geocoder: ^0.2.2-nullsafety
   shared_preferences: ^2.0.13
   email_validator: ^2.0.1
+  multiselect_formfield: ^0.1.7
 
 dev_dependencies:
   flutter_test:
