--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,13 @@ dependencies:
   http: ^0.13.4
   path_provider: ^2.0.9
   input_history_text_field: ^0.1.0
-  #flutter_geocoder: ^0.2.2-nullsafety
+  flutter_geocoder: ^0.2.2-nullsafety
   shared_preferences: ^2.0.13
   email_validator: ^2.0.1
   multiselect_formfield: ^0.1.7
   google_sign_in: ^5.3.0
   provider: ^6.0.2
-
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
