--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   google_sign_in: ^5.3.0
   provider: ^6.0.2
   carousel_slider: ^4.1.1
+  flutter_chat_ui: ^1.5.8
+  web_socket_channel: ^2.2.0
+  socket_io_client: ^2.0.0-beta
+  flutter_socket_io: any
 
 dev_dependencies:
   flutter_test:
